[ci skip] random forest exercise code aa375daffe8e554f8571069e2053d4ee7a5c823b

--- a/_sources/content/notebooks/feature_engineering.ipynb
+++ b/_sources/content/notebooks/feature_engineering.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "c01d6956",
+   "id": "fd318865",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -40,7 +40,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0a8ba20c",
+   "id": "1595b9f5",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -54,7 +54,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ebba8acc",
+   "id": "4920726f",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f1656c43",
+   "id": "af6058ec",
    "metadata": {},
    "source": [
     "## Time range\n",
@@ -98,7 +98,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d6a8a40a",
+   "id": "5148111a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,7 +113,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1795b376",
+   "id": "e46fd29d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b8e9a177",
+   "id": "ca64d477",
    "metadata": {},
    "source": [
     "\n",
@@ -154,7 +154,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c0cf0e5e",
+   "id": "6996fa79",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "67e6edc1",
+   "id": "1abc4550",
    "metadata": {},
    "source": [
     "\n",
@@ -178,7 +178,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "61b10455",
+   "id": "f919c473",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -221,7 +221,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ff69a69f",
+   "id": "e7b9a61b",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -243,7 +243,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9c90535e",
+   "id": "75db6cf9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -272,7 +272,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dc6c5e04",
+   "id": "3d4beaf9",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -287,7 +287,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c143246b",
+   "id": "06b74925",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -331,7 +331,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3566fa52",
+   "id": "bc4539f5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -341,7 +341,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ec168a18",
+   "id": "740ff0a3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -355,7 +355,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "45ba6cc3",
+   "id": "ebf7a04f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -368,7 +368,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2ff96359",
+   "id": "4739d243",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -386,7 +386,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a337802a",
+   "id": "18735b78",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -418,7 +418,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "07c31190",
+   "id": "8891ad6f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -441,7 +441,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "31012808",
+   "id": "3d843a95",
    "metadata": {},
    "source": [
     "## Investigating outliers in the lagged features\n",
@@ -453,7 +453,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "359ec432",
+   "id": "90ef8540",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -464,7 +464,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "47d62737",
+   "id": "1d558ac2",
    "metadata": {},
    "source": [
     "\n",
@@ -475,7 +475,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "24e4fcf4",
+   "id": "6f2cee49",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -486,7 +486,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fb19de6d",
+   "id": "f1725d53",
    "metadata": {},
    "source": [
     "\n",
@@ -498,7 +498,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4ec1ce28",
+   "id": "927cbee8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -522,7 +522,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "04e27a36",
+   "id": "2aafa205",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -542,7 +542,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0fa36469",
+   "id": "1daccbfc",
    "metadata": {},
    "source": [
     "\n",
@@ -567,7 +567,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "97d48731",
+   "id": "a025eb70",
    "metadata": {},
    "source": [
     "## Final dataset\n",
@@ -579,7 +579,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a0a822b1",
+   "id": "74a22984",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -612,7 +612,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4c79ae88",
+   "id": "2ed31ba5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -671,7 +671,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "98dd57ac",
+   "id": "88f8d15b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -697,7 +697,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0df9aac0",
+   "id": "3e79dd92",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -709,7 +709,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aa2c847e",
+   "id": "0a440e54",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -758,7 +758,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "09573761",
+   "id": "103be68f",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -786,7 +786,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "847da4e0",
+   "id": "c843e7f9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -817,7 +817,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d0e19182",
+   "id": "eaf7b93b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -848,7 +848,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "57ad2452",
+   "id": "bcbd10ea",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -885,7 +885,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fd1d7c48",
+   "id": "780b796b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -898,7 +898,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5af4ea77",
+   "id": "10aaa433",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1040,7 +1040,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7f37bda6",
+   "id": "773c1c14",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1124,7 +1124,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "83f6b157",
+   "id": "6f85881b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1207,7 +1207,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a699a640",
+   "id": "a52fdcec",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1290,7 +1290,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fbd9e8f5",
+   "id": "b2f1e9f6",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -1312,7 +1312,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ac872dd4",
+   "id": "d4c8dd44",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1322,7 +1322,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d212d4bf",
+   "id": "d5d007cf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1332,7 +1332,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7595967e",
+   "id": "81198b4e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1353,7 +1353,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d9348919",
+   "id": "cbd004d5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1369,7 +1369,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9d99cf09",
+   "id": "c3d4dd9f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1395,7 +1395,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b13b2285",
+   "id": "3177f11c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1421,7 +1421,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ecd01633",
+   "id": "cddcd186",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1441,7 +1441,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "863edcdb",
+   "id": "a174d61f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1451,7 +1451,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cc79ac78",
+   "id": "9705ed16",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1471,7 +1471,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3e6221c1",
+   "id": "bb713933",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1481,7 +1481,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6cc7b840",
+   "id": "fee53229",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1493,7 +1493,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "195f9aa7",
+   "id": "c2128585",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1503,7 +1503,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "02a4a81b",
+   "id": "537e4557",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1515,7 +1515,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "527f5c01",
+   "id": "1e43a64b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1532,7 +1532,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eff13236",
+   "id": "3ca56a6d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1548,7 +1548,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dc8727e7",
+   "id": "e72ff826",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1616,7 +1616,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bd59fe87",
+   "id": "513dfb8d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1628,7 +1628,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5c6664dd",
+   "id": "e8fb1437",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1639,7 +1639,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c41b456c",
+   "id": "c7f84f76",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1675,7 +1675,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b2c8a193",
+   "id": "b0191c6b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1685,7 +1685,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "31a9597a",
+   "id": "d065e60e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1730,7 +1730,129 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "19417f03",
+   "id": "d734337a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# TODO: Exercise using RandomForestRegressor\n",
+    "from sklearn.ensemble import RandomForestRegressor\n",
+    "\n",
+    "multioutput_predictions_rf = features_with_dropped_cols.skb.apply(\n",
+    "    RandomForestRegressor(max_leaf_nodes=30, random_state=0, n_jobs=-1),\n",
+    "    y=targets.skb.drop(cols=[\"prediction_time\", \"load_mw\"]).skb.mark_as_y(),\n",
+    ").skb.set_name(\"random_forest\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dea63ddd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "named_predictions_rf = multioutput_predictions_rf.rename(\n",
+    "    {k: v for k, v in zip(target_column_names, predicted_target_column_names)}\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "85afa2a7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot_at_time = datetime.datetime(2025, 5, 24, 0, 0, tzinfo=datetime.timezone.utc)\n",
+    "historical_timedelta = datetime.timedelta(hours=24 * 5)\n",
+    "plot_horizon_forecast(targets, named_predictions_rf, plot_at_time, historical_timedelta)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "45f17bc9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot_at_time = datetime.datetime(2025, 5, 25, 0, 0, tzinfo=datetime.timezone.utc)\n",
+    "plot_horizon_forecast(targets, named_predictions_rf, plot_at_time, historical_timedelta)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9f9bc8ec",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "multioutput_cv_results_rf = multioutput_predictions_rf.skb.cross_validate(\n",
+    "    cv=ts_cv_5,\n",
+    "    scoring=scoring,\n",
+    "    return_train_score=True,\n",
+    "    verbose=1,\n",
+    "    n_jobs=-1,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a779473a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "multioutput_cv_results_rf.round(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "83348037",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import itertools\n",
+    "from IPython.display import display\n",
+    "\n",
+    "for metric_name, dataset_type in itertools.product([\"mape\", \"r2\"], [\"train\", \"test\"]):\n",
+    "    columns = multioutput_cv_results_rf.columns[\n",
+    "        multioutput_cv_results.columns.str.startswith(f\"{dataset_type}_{metric_name}\")\n",
+    "    ]\n",
+    "    data_to_plot = multioutput_cv_results_rf[columns]\n",
+    "    data_to_plot.columns = [\n",
+    "        col.replace(f\"{dataset_type}_\", \"\")\n",
+    "        .replace(f\"{metric_name}_\", \"\")\n",
+    "        .replace(\"_\", \" \")\n",
+    "        for col in columns\n",
+    "    ]\n",
+    "\n",
+    "    data_long = data_to_plot.melt(var_name=\"horizon\", value_name=\"score\")\n",
+    "    chart = (\n",
+    "        altair.Chart(\n",
+    "            data_long,\n",
+    "            title=f\"{dataset_type.title()} {metric_name.upper()} Scores by Horizon\",\n",
+    "        )\n",
+    "        .mark_boxplot(extent=\"min-max\")\n",
+    "        .encode(\n",
+    "            x=altair.X(\n",
+    "                \"horizon:N\",\n",
+    "                title=\"Horizon\",\n",
+    "                sort=altair.Sort(\n",
+    "                    [f\"horizon {h}h\" for h in range(1, data_to_plot.shape[1])]\n",
+    "                ),\n",
+    "            ),\n",
+    "            y=altair.Y(\"score:Q\", title=f\"{metric_name.upper()} Score\"),\n",
+    "            color=altair.Color(\"horizon:N\", legend=None),\n",
+    "        )\n",
+    "    )\n",
+    "\n",
+    "    display(chart)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ad9914e7",
    "metadata": {},
    "outputs": [],
    "source": []
