--- a/jupyterlite/files/notebooks/feature_engineering.ipynb
+++ b/jupyterlite/files/notebooks/feature_engineering.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "9264e2b9",
+   "id": "30d170bb",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -40,7 +40,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7eee81ec",
+   "id": "1c6e182b",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -54,7 +54,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7dda1b73",
+   "id": "c696c1f2",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c1ba1c1f",
+   "id": "ac14fd26",
    "metadata": {},
    "source": [
     "## Time range\n",
@@ -98,7 +98,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3833daa5",
+   "id": "86c356bb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,7 +113,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0e628b09",
+   "id": "a27dcdd3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "79d56fcf",
+   "id": "acb0ddbc",
    "metadata": {},
    "source": [
     "\n",
@@ -154,7 +154,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "56ba8415",
+   "id": "6f49b500",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "26f584b0",
+   "id": "112057c6",
    "metadata": {},
    "source": [
     "\n",
@@ -178,7 +178,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "de34352d",
+   "id": "ccead2ea",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -221,7 +221,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5141a4ad",
+   "id": "17af28ad",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -243,7 +243,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "793af7bc",
+   "id": "848228e0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -272,7 +272,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c20c6913",
+   "id": "9a1db5f9",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -287,7 +287,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b813db6f",
+   "id": "a3013325",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -331,7 +331,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2e850020",
+   "id": "73cac370",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -341,7 +341,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cc379a28",
+   "id": "fb8bff29",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -355,7 +355,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eef6ba71",
+   "id": "19c8ed36",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -368,7 +368,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "939c861a",
+   "id": "9058a7f9",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -386,7 +386,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c74c381b",
+   "id": "5cf3bf4c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -418,7 +418,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2f248a58",
+   "id": "b6145947",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -441,7 +441,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2a688f1d",
+   "id": "83425806",
    "metadata": {},
    "source": [
     "## Investigating outliers in the lagged features\n",
@@ -453,7 +453,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c95cd7f1",
+   "id": "9057ee78",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -464,7 +464,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "69a32c30",
+   "id": "99d50ecf",
    "metadata": {},
    "source": [
     "\n",
@@ -475,7 +475,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "67addd5a",
+   "id": "0bc58f1d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -486,7 +486,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b8015b5f",
+   "id": "283be6a3",
    "metadata": {},
    "source": [
     "\n",
@@ -498,7 +498,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f2ab26f4",
+   "id": "0d29db3d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -522,7 +522,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "baa9684d",
+   "id": "f748aab3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -542,7 +542,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b04d90c1",
+   "id": "96567e5c",
    "metadata": {},
    "source": [
     "\n",
@@ -567,7 +567,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f3e8344d",
+   "id": "cc213eba",
    "metadata": {},
    "source": [
     "## Final dataset\n",
@@ -579,7 +579,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c0fa3e72",
+   "id": "87d765f0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -612,7 +612,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9242e0c5",
+   "id": "f9355026",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -671,7 +671,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5359b8c2",
+   "id": "1e9f923d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -697,7 +697,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ea73957d",
+   "id": "65818192",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -709,7 +709,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "61679650",
+   "id": "ef92c4eb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -758,7 +758,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fd27445a",
+   "id": "dd1c41b0",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -786,7 +786,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d73e40a9",
+   "id": "f11fd23f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -817,7 +817,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "be343adc",
+   "id": "24fdbbab",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -848,7 +848,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5947c87f",
+   "id": "b244a165",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -885,7 +885,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "738f8534",
+   "id": "d946e3df",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -898,7 +898,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5b08df7d",
+   "id": "58501375",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1040,7 +1040,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c7d6fa41",
+   "id": "144fceab",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1124,7 +1124,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cbe8e081",
+   "id": "99ef064b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1207,7 +1207,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "14df40df",
+   "id": "f686cb37",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1290,7 +1290,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0481b3af",
+   "id": "1b235f95",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -1312,7 +1312,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fd78611b",
+   "id": "1d819d2e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1322,7 +1322,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1badf58c",
+   "id": "5259cdc7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1332,7 +1332,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "af3b42b9",
+   "id": "67174dd7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1353,7 +1353,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a5ad752d",
+   "id": "891f00ae",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1369,7 +1369,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "61ea4ae2",
+   "id": "83b30a88",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1395,7 +1395,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8b22a502",
+   "id": "a547720a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1421,7 +1421,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "46a2cc8f",
+   "id": "b7cd0eb3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1441,7 +1441,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "442011db",
+   "id": "dcf9abb5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1451,7 +1451,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "59970e19",
+   "id": "048ae19a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1471,7 +1471,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ff1649b8",
+   "id": "046c55df",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1481,7 +1481,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ccbc538f",
+   "id": "3e77a170",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1493,7 +1493,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0f24d38d",
+   "id": "568c0c5f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1503,7 +1503,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4df7f94c",
+   "id": "c7c79877",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1515,7 +1515,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "39417d31",
+   "id": "d49277f1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1532,7 +1532,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3b3fea86",
+   "id": "eb6119af",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1548,7 +1548,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0313ab5f",
+   "id": "22cc8fba",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1616,7 +1616,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "59a37e46",
+   "id": "b7a52033",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1628,7 +1628,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "55998705",
+   "id": "03130cdf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1639,7 +1639,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c2dce7f8",
+   "id": "3c78dbdb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1675,7 +1675,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a13b3820",
+   "id": "ac6baadd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1685,7 +1685,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "988cceb8",
+   "id": "2bc2831b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1730,7 +1730,129 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "160e0208",
+   "id": "b605d41a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# TODO: Exercise using RandomForestRegressor\n",
+    "from sklearn.ensemble import RandomForestRegressor\n",
+    "\n",
+    "multioutput_predictions_rf = features_with_dropped_cols.skb.apply(\n",
+    "    RandomForestRegressor(max_leaf_nodes=30, random_state=0, n_jobs=-1),\n",
+    "    y=targets.skb.drop(cols=[\"prediction_time\", \"load_mw\"]).skb.mark_as_y(),\n",
+    ").skb.set_name(\"random_forest\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6cb7fc45",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "named_predictions_rf = multioutput_predictions_rf.rename(\n",
+    "    {k: v for k, v in zip(target_column_names, predicted_target_column_names)}\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "82ee724a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot_at_time = datetime.datetime(2025, 5, 24, 0, 0, tzinfo=datetime.timezone.utc)\n",
+    "historical_timedelta = datetime.timedelta(hours=24 * 5)\n",
+    "plot_horizon_forecast(targets, named_predictions_rf, plot_at_time, historical_timedelta)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6e17568e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot_at_time = datetime.datetime(2025, 5, 25, 0, 0, tzinfo=datetime.timezone.utc)\n",
+    "plot_horizon_forecast(targets, named_predictions_rf, plot_at_time, historical_timedelta)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d24172e9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "multioutput_cv_results_rf = multioutput_predictions_rf.skb.cross_validate(\n",
+    "    cv=ts_cv_5,\n",
+    "    scoring=scoring,\n",
+    "    return_train_score=True,\n",
+    "    verbose=1,\n",
+    "    n_jobs=-1,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "765c1855",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "multioutput_cv_results_rf.round(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b8d05c2c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import itertools\n",
+    "from IPython.display import display\n",
+    "\n",
+    "for metric_name, dataset_type in itertools.product([\"mape\", \"r2\"], [\"train\", \"test\"]):\n",
+    "    columns = multioutput_cv_results_rf.columns[\n",
+    "        multioutput_cv_results.columns.str.startswith(f\"{dataset_type}_{metric_name}\")\n",
+    "    ]\n",
+    "    data_to_plot = multioutput_cv_results_rf[columns]\n",
+    "    data_to_plot.columns = [\n",
+    "        col.replace(f\"{dataset_type}_\", \"\")\n",
+    "        .replace(f\"{metric_name}_\", \"\")\n",
+    "        .replace(\"_\", \" \")\n",
+    "        for col in columns\n",
+    "    ]\n",
+    "\n",
+    "    data_long = data_to_plot.melt(var_name=\"horizon\", value_name=\"score\")\n",
+    "    chart = (\n",
+    "        altair.Chart(\n",
+    "            data_long,\n",
+    "            title=f\"{dataset_type.title()} {metric_name.upper()} Scores by Horizon\",\n",
+    "        )\n",
+    "        .mark_boxplot(extent=\"min-max\")\n",
+    "        .encode(\n",
+    "            x=altair.X(\n",
+    "                \"horizon:N\",\n",
+    "                title=\"Horizon\",\n",
+    "                sort=altair.Sort(\n",
+    "                    [f\"horizon {h}h\" for h in range(1, data_to_plot.shape[1])]\n",
+    "                ),\n",
+    "            ),\n",
+    "            y=altair.Y(\"score:Q\", title=f\"{metric_name.upper()} Score\"),\n",
+    "            color=altair.Color(\"horizon:N\", legend=None),\n",
+    "        )\n",
+    "    )\n",
+    "\n",
+    "    display(chart)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8ad5d66a",
    "metadata": {},
    "outputs": [],
    "source": []
